[gd_scene load_steps=14 format=2]

[ext_resource path="res://Network/Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Static/Fonts/Title_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Static/Fonts/Large_Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Static/Resources/Backgrounds/Storm.png" type="Texture" id=4]
[ext_resource path="res://Static/Fonts/Medium_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Static/Textures/Raindrop.png" type="Texture" id=6]
[ext_resource path="res://Static/Resources/Sounds/rain-and-thunder-nature-sounds-7803.mp3" type="AudioStream" id=7]
[ext_resource path="res://Static/Resources/Sounds/lightning-storm-6077.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1280, 720 )
modulate_color = Color( 0.623529, 0.623529, 0.623529, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.619608 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.545455 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.25
emission_shape = 2
emission_box_extents = Vector3( 1500, 1, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 980, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.13
scale_curve = SubResource( 5 )
color = Color( 0.862745, 0.878431, 1, 1 )
hue_variation = 0.01
hue_variation_random = 0.5

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartScreen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="StartScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -30.0
text = "Dueling Wizards pre-alpha "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 600, 300 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.5
margin_top = -141.0
margin_right = 269.5
margin_bottom = 141.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="MarginContainer" parent="StartScreen/Panel/VBoxContainer"]
margin_right = 539.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Title" type="Label" parent="StartScreen/Panel/VBoxContainer/TitleContainer"]
margin_top = 41.0
margin_right = 539.0
margin_bottom = 109.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Dueling Wizards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="StartScreen/Panel/VBoxContainer"]
margin_top = 154.0
margin_right = 539.0
margin_bottom = 282.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputFields" type="VBoxContainer" parent="StartScreen/Panel/VBoxContainer/Menu"]
margin_right = 539.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="IPAddressInputField" type="LineEdit" parent="StartScreen/Panel/VBoxContainer/Menu/InputFields"]
margin_right = 539.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
placeholder_text = "Ip address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputButtons" type="HBoxContainer" parent="StartScreen/Panel/VBoxContainer/Menu"]
margin_top = 84.0
margin_right = 539.0
margin_bottom = 128.0
alignment = 1

[node name="Create" type="Button" parent="StartScreen/Panel/VBoxContainer/Menu/InputButtons"]
margin_left = 53.0
margin_right = 292.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "Create game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="StartScreen/Panel/VBoxContainer/Menu/InputButtons"]
margin_left = 296.0
margin_right = 485.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Join game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
text = "Quit to desktop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainEffect" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
position = Vector2( 693.611, -98.4827 )
amount = 5000
lifetime = 1.5
preprocess = 3.0
randomness = 0.72
visibility_rect = Rect2( 0, 0, 0, 200 )
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="LightningEffect" type="CanvasModulate" parent="."]

[node name="LightningSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AmbientSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="pressed" from="StartScreen/Panel/VBoxContainer/Menu/InputButtons/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="StartScreen/Panel/VBoxContainer/Menu/InputButtons/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
